# smart-clone-0g

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRIVACY.md  README.md  index.html  pyproject.toml  render.yaml  设计文档.docx
config/: app.0g.json  app.dryrun.json  app.gonka.json  app.json  app.prod.json
docs/: DEMO_VIDEO_SCRIPT.md  DEPLOY.md  FRAMEWORK.md  OPERATIONS.md  REQUIREMENTS_ALIGNMENT.md  USER_GUIDE.md
scripts/: zg_add_account.py
skills/daily_story/: prompt.md  skill.json
skills/self_awareness/: prompt.md  skill.json
skills/weekly_review/: prompt.md  skill.json
src/smart_avatar/: app.py  audit.py  auth.py  backup.py  chat.py  cleanup.py  config.py  credentials.py  domain.py  embeddings.py  logging_config.py  mcp.py  migration.py  models.py  permissions.py  privacy.py  security.py  skills.py  storage.py  transcribe.py
static/: app.js  styles.css
tests/: test_api.py  test_commercialization.py  test_framework.py
tools/example_calendar/: tool.json
web/: index.html
web/static/: app.js  styles.css  tokens.css
