[project]
name = "smart-avatar"
version = "0.1.0"
description = "Privacy-first personal memory, chat, skill, and MCP application framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "coverage>=7.4.0"
]
asr = [
  "faster-whisper>=1.0.0"
]
embedding = [
  "sentence-transformers>=2.7.0"
]
postgresql = ["asyncpg>=0.29.0"]
redis = ["redis>=5.0.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
